Fix alignment in workspace filter

--- a/src/app/projects/list-projects/list-projects.styl
+++ b/src/app/projects/list-projects/list-projects.styl
@@ -60,7 +60,6 @@ md-progress-linear.projects-list-projects-progress
 .projects-list-projects-filter-workspace-label
   color $label-primary-color
   margin-left 10px
-  margin-top 6px
 
 .projects-list-projects-filter-action
   color $primary-color
